--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,72 +1,67 @@
 @font-face {
-    font-family:'Oswald' ;
-    src:local('Oswald'),url(../fonts/Oswald-VariableFont_wght.ttf)
+  font-family: "Oswald";
+  src: local("Oswald"), url(../fonts/Oswald-VariableFont_wght.ttf);
 }
-
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
-    color: #201e1e;
-    /* background-image: url("../Images/1436808.jpg"); */
-    background-color: #f6f4f4;
-    /* background-repeat: no-repeat;
-    background-size: cover; */
-
+  color: #0958c0;
+  background-color: #f6f4f4;
+  min-height:100vh;
 }
-
 
 nav {
-    background-color: #219ef1;
+  background-color: #219ef1;
 }
 
 nav ul {
-    display: flex;
+  display: flex;
 }
 
 nav li {
-
-    list-style-type: none;
-    margin: 5px;
-    padding: 10px;
-
+  list-style-type: none;
+  margin: 5px;
+  padding: 10px;
 }
 
 .img-logo {
-    height: 50px;
-
+  height: 50px;
 }
 
 .backgroundpic {
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-repeat: no-repeat;
+  background-size: cover;
+  
 }
 
 .team-cards {
-    display:flex;
-    flex-wrap: wrap;
-    margin:auto;
-    justify-content: center;
-    
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  justify-content: center;
 }
 .team {
-    margin:20px;
-    padding:30px;
-    background-color: rgb(221, 209, 209);
-    position: relative;
-    width: 200px;
-    border-radius: 20px;
-    
+  margin: 20px;
+  padding: 30px;
+  background-color: rgb(221, 209, 209);
+  position: relative;
+  width: 200px;
+  border-radius: 20px;
 }
 .team img {
-    position: absolute;
-    right: 20px;
-    bottom: 30px;
+  position: absolute;
+  right: 20px;
+  bottom: 30px;
 }
-li {list-style:none ;
-
+li {
+  list-style: none;
 }
 .team-container h1 {
-    margin:0 auto; 
-    text-align: center;
+  margin: 0 auto;
+  text-align: center;
 }
 .spons-container {
-    -moz-text-decoration-style: dashed;
+  -moz-text-decoration-style: dashed;
 }
